--- a/web/index.html
+++ b/web/index.html
@@ -94,10 +94,76 @@
       right: 0;
     }
 
+    /* Download APK Button Styles */
+    .download-apk-banner {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      background: linear-gradient(135deg, #FF4B6E 0%, #FF6B8A 100%);
+      padding: 12px 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+      z-index: 9999;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+    }
+
+    .download-apk-button {
+      background-color: white;
+      color: #FF4B6E;
+      padding: 10px 24px;
+      border-radius: 25px;
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 14px;
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      transition: all 0.3s ease;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+    }
+
+    .download-apk-button:hover {
+      background-color: #f0f0f0;
+      transform: translateY(-1px);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    }
+
+    .download-apk-button:active {
+      transform: translateY(0);
+    }
+
+    .download-icon {
+      width: 20px;
+      height: 20px;
+    }
+
+    .banner-text {
+      color: white;
+      margin-right: 16px;
+      font-size: 14px;
+      font-weight: 500;
+    }
+
+    /* Hide banner on very small screens */
+    @media (max-width: 400px) {
+      .banner-text {
+        display: none;
+      }
+      .download-apk-banner {
+        padding: 8px 12px;
+      }
+    }
+
     @media (prefers-color-scheme: dark) {
       body {
         background-color: #1A1118;
           }
+      .download-apk-banner {
+        background: linear-gradient(135deg, #2A1F26 0%, #3A2F36 100%);
+      }
     }
   </style>
   <script id="splash-screen-script">
@@ -109,6 +175,25 @@
   </script>
 </head>
 <body>
+  <!-- Download APK Banner -->
+  <div class="download-apk-banner">
+    <span class="banner-text">Get the VibeU app for Android</span>
+    <!-- 
+      TODO: Replace "YOUR_DOWNLOAD_LINK_HERE" with your actual APK download link
+      Options:
+      1. Google Drive: Upload APK, share with "Anyone with link", get direct download URL
+      2. GitHub Releases: Create a release and upload the APK
+      3. Dropbox: Upload and get a direct download link
+      4. Firebase Storage: Upload to Firebase Storage and get download URL
+    -->
+    <a href="YOUR_DOWNLOAD_LINK_HERE" class="download-apk-button">
+      <svg class="download-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M12 16L7 11L8.4 9.55L11 12.15V4H13V12.15L15.6 9.55L17 11L12 16ZM6 20C5.45 20 4.97933 19.8043 4.588 19.413C4.19667 19.0217 4.00067 18.5507 4 18V15H6V18H18V15H20V18C20 18.55 19.8043 19.021 19.413 19.413C19.0217 19.805 18.5507 20.0007 18 20H6Z" fill="currentColor"/>
+      </svg>
+      Download APK
+    </a>
+  </div>
+  
   <picture id="splash">
       <source srcset="splash/img/light-1x.png?v=2 1x, splash/img/light-2x.png?v=2 2x, splash/img/light-3x.png?v=2 3x, splash/img/light-4x.png?v=2 4x" media="(prefers-color-scheme: light)">
       <source srcset="splash/img/dark-1x.png?v=2 1x, splash/img/dark-2x.png?v=2 2x, splash/img/dark-3x.png?v=2 3x, splash/img/dark-4x.png?v=2 4x" media="(prefers-color-scheme: dark)">
